--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <section class="container main">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="img/combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+        <div>
+            <h1 class="container__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="img/combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+            <a href="www.alura.com.br" class="container__button">Assine por 12x de R$ 120,00*</a>
+            <a href="www.alura.com.br" class="container__button secondary_button">Assinar somente o Alura+</a>
+            <p class="container__notice">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
     </section>
 </body>
 </html>
