created new sections

--- a/index.html
+++ b/index.html
@@ -8,16 +8,43 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Alura Plus</title>
 </head>
 <body>
     <section class="container main">
-        <div>
+        <div class="container__box">
             <h1 class="container__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="img/combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+            <img src="img/combo.png" class="container__image" alt="O combo+ é a junção do alura+ e o alura língua">
             <a href="www.alura.com.br" class="container__button">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__button secondary_button">Assinar somente o Alura+</a>
             <p class="container__notice">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
+    <section class="container secondary">
+        <img src="img/platforms.png" class="secondary__image" alt="Um monitore um celular com o alura plus aberto">
+        <div class="container__description">
+            <h2 class="description__title">Assista do seu jeito</h2>
+            <p class="description__text">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros 
+                aparelhos. Nossa seleção de cursos não para de crescer.
+            </p>
+        </div>
+    </section>
+    <section class="container secondary">
+        <div class="container__description">
+            <p class="description__text">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos 
+                de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.
+            </p>
+            <a href="www.alura.com.br" class="container__button">Assinar o Combo+</a>
+        </div>
+        <img src="img/screens.png" class="secondary__image" alt="Tela da alura plus e do alura língua">
+    </section>
+    <section class="container secondary">
+        <img src="img/notebook.png" class="secondary__image" alt="Notebook com cursos da alura aberto">
+        <div class="container__description">
+            <h2 class="description__title">Baixe seus cursos</h2>
+            <p class="description__text">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, 
+                até mesmo sem internet.
+            </p>
         </div>
     </section>
 </body>
