--- a/index.html
+++ b/index.html
@@ -47,5 +47,55 @@
             </p>
         </div>
     </section>
+    <section class="devices">
+        <h2 class="devices__title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="devices__list">
+            <li>
+                <img src="img/tv.png" alt="ícone de televisão">
+                <h3 class="item__list">TV</h3>
+            </li>
+            <li>
+                <img src="img/computers.png" alt="ícone de computador">
+                <h3 class="item__list">Computadores</h3>
+            </li>
+            <li>
+                <img src="img/cell-phone.png" alt="ícone de celular">
+                <h3 class="item__list">Celulares e tablets</h3>
+            </li>
+        </ul>
+    </section>
+    <footer class="footer">
+        <img src="img/logo.png" class="logo__alura" alt="logo alura+">
+        <ul class="footer__list">
+            <li class="item__list__footer">
+                <a href="">Idioma</a>
+            </li>
+            <li class="item__list__footer">
+                <a href="">Dispositivos compatíveis</a>
+            </li>
+            <li class="item__list__footer">
+                <a href="">Contrato de assinatura</a>
+            </li>
+            <li class="item__list__footer">
+                <a href="">Politica de privacidade</a>
+            </li>
+            <li class="item__list__footer">
+                <a href="">Proteção de dados no Brasil</a>
+            </li>
+            <li class="item__list__footer">
+                <a href="">Anuncios personalizados</a>
+            </li>
+            <li class="item__list__footer">
+                <a href="">Ajuda</a>
+            </li>
+        </ul>
+        <p class="footer__text">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. 
+            Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+        </p>
+        <p class="footer__text">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. 
+            O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, 
+            São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
+        </p>
+    </footer>
 </body>
 </html>
